[package]
name = "xdirs"
version = "0.1.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Additional functions for application paths, based on the dirs-next crate."
documentation = "https://docs.rs/xdirs/"
repository = "https://github.com/johnstonskj/rust-xdirs.git"
license = "MIT"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
dirs-next = "2.0.0"
dirs-sys-next = "0.1.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["knownfolders"] }